--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend Mentor | Blog Preview Card</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Frontend Mentor | Blog Preview Card</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./styles.css" />
+    </head>
+    <body>
+        <main role="main" class="main-container">
+            <div class="card">
+                <div class="card-image">
+                    <img
+                        src="./assets/images/illustration-article.svg"
+                        alt="Article illustration"
+                    />
+                </div>
+                <div class="card-content">
+                    <p class="card-pill">Learning</p>
+                    <p class="card-publication-date">Published 21 Dec 2023</p>
+                    <h2 class="card-title">HTML & CSS Foundations</h1>
+
+                    <p class="card-text">
+                        These languages are the backbone of every website,
+                        defining structure, content, and presentation.
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <div class="footer-image">
+                        <img
+                            src="./assets/images/image-avatar.webp"
+                            alt="Avatar"
+                        />
+                    </div>
+                    <p class="footer-text">Greg Hooper</p>
+                </div>
+            </div>
+        </main>
+    </body>
 </html>
