--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <main role="main" class="main-container">
-            <div class="card">
+            <section class="card">
                 <div class="card-image">
                     <img
                         src="./assets/images/illustration-article.svg"
@@ -40,7 +40,15 @@
                     </div>
                     <p class="footer-text">Greg Hooper</p>
                 </div>
-            </div>
+            </section>
+            <section class="attribution">
+                Challenge by
+                <a
+                    href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H"
+                    target="_blank"
+                    >Frontend Mentor</a
+                >. Coded by <a href="https://github.com/MisterWaner" target="_blank">Erwan Soulas</a>.
+            </section>
         </main>
     </body>
 </html>
